--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ spring:
       host: 192.168.70.128
       port: 6379
       password: 123456
+  mvc:
+    view:
+      prefix: /templates/
+      suffix: .html
