feature : 短链接监控功能 开发短链接监控地区访问数据

--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ spring:
     view:
       prefix: /templates/
       suffix: .html
+short-link:
+  stats:
+    locale:
+      amap-key: 7d45420859975512ad10090967c84cfd
