factor: 短链接监控  使用RocketMQ 解决短链接跳转时速度慢的问题

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <redisson.version>3.21.3</redisson.version>
         <guava.version>30.0-jre</guava.version>
         <jsoup.version>1.17.2</jsoup.version>
+        <rocketmq.version>2.2.3</rocketmq.version>
     </properties>
     <dependencies>
         <dependency>
@@ -103,6 +104,12 @@
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool-all.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.redisson</groupId>
