--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 
 
 spring:
+  application:
+    name: short-link-project
   datasource:
     # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
@@ -13,3 +15,7 @@ spring:
       host: 192.168.70.128
       port: 6379
       password: 123456
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.70.128:8848
