--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: short-link-project
+    name: short-link-admin
   datasource:
     # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
@@ -18,4 +18,4 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.70.128:8848
+        server-addr: 127.0.0.1:8848
