--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: short-link-admin
+    name: short-link-project
   datasource:
     # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
@@ -22,7 +22,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.70.128:8848
+        server-addr: 127.0.0.1:8848
 
 
 rocketmq:
