屏蔽高德API 奶奶的号被封了

--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -35,5 +35,5 @@ rocketmq:
 short-link:
   stats:
     locale:
-      amap-key: 7d45420859975512ad10090967c84cfd
+      amap-key: #奶奶的忘记屏蔽api了 号都要被封了 自己去注册高德API吧
   domain: uri.link:8001
